# quant_lab

./: .gitignore  AGENTS.md  README_US_STOCK_SELECTION.md  pyproject.toml
docs/: 588200_strategy_optimizer.md  588200pool_context_handoff_20260415.md  US_STOCK_SELECTION_AUTORUN.md  US_STOCK_SELECTION_EVIDENCE_PACKAGE_INDEX_20260501_190000.md  US_STOCK_SELECTION_MVE1_DATA_AUDIT_EXEC_SUMMARY_20260501_225200.md  US_STOCK_SELECTION_MVE1_LONGER_HISTORY_DATA_AUDIT_20260501_225200.md  US_STOCK_SELECTION_NEXT_RESEARCH_ROADMAP_20260501_190000.md  US_STOCK_SELECTION_STRATEGY_USAGE_GUIDE_20260501_190000.md  US_STOCK_SELECTION_V8_1_CYCLE_03_EXEC_SUMMARY_20260428_170108.md  US_STOCK_SELECTION_V8_1_CYCLE_03_EXEC_SUMMARY_20260428_170412.md  US_STOCK_SELECTION_V8_1_CYCLE_04_EXEC_SUMMARY_20260429_000834.md  US_STOCK_SELECTION_V8_1_CYCLE_04_EXEC_SUMMARY_20260429_001104.md  US_STOCK_SELECTION_V8_1_CYCLE_05_EXEC_SUMMARY_20260429_070013.md  US_STOCK_SELECTION_V8_1_EVOLUTION_CYCLE_03_20260428_170412.md  US_STOCK_SELECTION_V8_1_EVOLUTION_CYCLE_04_20260429_000834.md  US_STOCK_SELECTION_V8_1_EVOLUTION_CYCLE_04_20260429_001104.md  US_STOCK_SELECTION_V8_1_EVOLUTION_CYCLE_05_20260429_065506.md  US_STOCK_SELECTION_V8_1_EVOLUTION_CYCLE_20260428_160415.md  US_STOCK_SELECTION_V8_1_EVOLUTION_CYCLE_20260428_160436.md  US_STOCK_SELECTION_V8_1_EVOLUTION_CYCLE_20260428_160504.md  US_STOCK_SELECTION_V8_1_EVOLUTION_PLATEAU_MEMO_20260429_065506.md  US_STOCK_SELECTION_V8_1_OVERLAY_PLATEAU_TO_V8_2_STOCK_SELECTION_TRANSITION_20260430_225000.md  US_STOCK_SELECTION_V8_2_0P05_FINAL_VALIDATION_20260501_183000.md  US_STOCK_SELECTION_V8_2_0P05_FINAL_VALIDATION_EXEC_SUMMARY_20260501_183000.md  US_STOCK_SELECTION_V8_2_BOUNDED_AUDIT_REPLAY_20260501_113100.md  US_STOCK_SELECTION_V8_2_BOUNDED_AUDIT_REPLAY_EXEC_SUMMARY_20260501_113100.md  US_STOCK_SELECTION_V8_2_GATE_AWARE_RERANKING_REPLAY_20260501_132100.md  US_STOCK_SELECTION_V8_2_HIGH_BETA_PENALTY_EXEC_SUMMARY_20260501_164800.md  US_STOCK_SELECTION_V8_2_HIGH_BETA_PENALTY_ROBUSTNESS_20260501_164800.md  US_STOCK_SELECTION_V8_2_RERANKING_EXEC_SUMMARY_20260501_132100.md  (+36 more)
inputs/: current_positions_588200.template.csv  (+2 more)
(+616 files in other folders)
